force-app/main/default/objects/Results__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Encounter</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>