force-app/main/default/objects/Results__c/fields/Patient_Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Patient_Medical_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Medical Test</label>
    <referenceTo>Patient_Medical_Test__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>