force-app/main/default/objects/Results__c/fields/Patient_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Patient_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Procedure</label>
    <referenceTo>Patient_Procedure__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>