force-app/main/default/objects/Results__c/fields/Patient_Results__c.field-meta.xml
<CustomField>
    <fullName>Patient_Results__c</fullName>
    <label>Patient Results</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>