force-app/main/default/objects/Results__c/fields/Results_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Results_Remarks__c</fullName>
    <label>Results Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>